--- a/Freelance.Application/Freelance.Application.csproj
+++ b/Freelance.Application/Freelance.Application.csproj
@@ -34,7 +34,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="ResponsesCustomerOrders\Queries\" />
+    <Folder Include="ResponsesImplOrders\Commands\" />
   </ItemGroup>
 
 </Project>
