github oauth error

--- a/Freelance.WebApi/appsettings.json
+++ b/Freelance.WebApi/appsettings.json
@@ -11,5 +11,12 @@
     "views": "http://rezonint7-001-site1.ftempurl.com/",
     "logs_local": "bin\\Debug\\net6.0\\wwwroot\\logs",
     "logs_host": "wwwroot\\logs\\"
+  },
+  "OAuth": {
+    "GitHub": {
+      "ClientId": "2b65cb9cfbb9f4fda5ee",
+      "ClientSecret": "26540f715132276df7a05ba3abb0bea5f506f8bf",
+
+    }
   }
 }
