--- a/Freelance.WebApi/appsettings.json
+++ b/Freelance.WebApi/appsettings.json
@@ -16,7 +16,26 @@
     "GitHub": {
       "ClientId": "2b65cb9cfbb9f4fda5ee",
       "ClientSecret": "26540f715132276df7a05ba3abb0bea5f506f8bf",
-
+      "CallbackURL": "/callback/github-oauth",
+      "AuthorizationEndpoint": "https://github.com/login/oauth/authorize",
+      "TokenEndpoint": "https://github.com/login/oauth/access_token",
+      "UserInfoEndpoint": "https://api.github.com/user"
+    },
+    "Google": {
+      "ClientId": "clientId-google",
+      "ClientSecret": "clientSecret-secret",
+      "CallbackURL": "/callback/google",
+      "AuthorizationEndpoint": "https://accounts.google.com/o/oauth2/v2/auth",
+      "TokenEndpoint": "https://oauth2.googleapis.com/token",
+      "UserInfoEndpoint": "https://www.googleapis.com/oauth2/v3/userinfo"
+    },
+    "Vkontakte": {
+      "ClientId": "clientId-vk",
+      "ClientSecret": "clientSecret-vk возможно не требуется",
+      "CallbackURL": "/callback/vk",
+      "AuthorizationEndpoint": "https://oauth.vk.com/authorize",
+      "TokenEndpoint": "https://oauth.vk.com/access_token",
+      "UserInfoEndpoint": "https://www.googleapis.com/oauth2/v3/userinfo"
     }
   }
 }
