--- a/Freelance.WebApi/appsettings.json
+++ b/Freelance.WebApi/appsettings.json
@@ -14,8 +14,8 @@
   },
   "OAuth": {
     "GitHub": {
-      "ClientId": "2b65cb9cfbb9f4fda5ee",
-      "ClientSecret": "26540f715132276df7a05ba3abb0bea5f506f8bf",
+      "ClientId": "client-id",
+      "ClientSecret": "client-secret",
       "CallbackURL": "/callback/github-oauth",
       "AuthorizationEndpoint": "https://github.com/login/oauth/authorize",
       "TokenEndpoint": "https://github.com/login/oauth/access_token",
