--- a/Freelance.WebApi/appsettings.json
+++ b/Freelance.WebApi/appsettings.json
@@ -4,34 +4,34 @@
     "Issuer": "FreelanceLab",
     "Audience": "http://rezonint7-001-site1.ftempurl.com/",
     "Key": "b13ff0a6-d0f1-45bd-8b59-3fd526a43bd4"
-  },  
+  },
   "AllowedHosts": "*",
   "ApiURL": {
-    "common": "http://rezonint7-001-site1.ftempurl.com/api/",
-    "views": "http://rezonint7-001-site1.ftempurl.com/",
+    "common": "https://localhost:7019/api/",
+    "views": "https://localhost:7019/api/",
     "logs_local": "bin\\Debug\\net6.0\\wwwroot\\logs",
     "logs_host": "wwwroot\\logs\\"
   },
   "OAuth": {
     "GitHub": {
-      "ClientId": "client-id",
-      "ClientSecret": "client-secret",
+      "ClientId": "id",
+      "ClientSecret": "secret",
       "CallbackURL": "/callback/github-oauth",
       "AuthorizationEndpoint": "https://github.com/login/oauth/authorize",
       "TokenEndpoint": "https://github.com/login/oauth/access_token",
       "UserInfoEndpoint": "https://api.github.com/user"
     },
     "Google": {
-      "ClientId": "clientId-google",
-      "ClientSecret": "clientSecret-secret",
+      "ClientId": "id",
+      "ClientSecret": "secret",
       "CallbackURL": "/callback/google",
       "AuthorizationEndpoint": "https://accounts.google.com/o/oauth2/v2/auth",
       "TokenEndpoint": "https://oauth2.googleapis.com/token",
       "UserInfoEndpoint": "https://www.googleapis.com/oauth2/v3/userinfo"
     },
     "Vkontakte": {
-      "ClientId": "clientId-vk",
-      "ClientSecret": "clientSecret-vk возможно не требуется",
+      "ClientId": "id",
+      "ClientSecret": "secret",
       "CallbackURL": "/callback/vk",
       "AuthorizationEndpoint": "https://oauth.vk.com/authorize",
       "TokenEndpoint": "https://oauth.vk.com/access_token",
