--- a/Freelance.WebApi/appsettings.json
+++ b/Freelance.WebApi/appsettings.json
@@ -7,31 +7,31 @@
   },
   "AllowedHosts": "*",
   "ApiURL": {
-    "common": "https://localhost:7019/api/",
-    "views": "https://localhost:7019/api/",
+    "common": "http://rezonint7-001-site1.ftempurl.com/api/",
+    "views": "http://rezonint7-001-site1.ftempurl.com/",
     "logs_local": "bin\\Debug\\net6.0\\wwwroot\\logs",
     "logs_host": "wwwroot\\logs\\"
   },
   "OAuth": {
     "GitHub": {
-      "ClientId": "id",
-      "ClientSecret": "secret",
+      "ClientId": "qwe",
+      "ClientSecret": "qwe",
       "CallbackURL": "/callback/github-oauth",
       "AuthorizationEndpoint": "https://github.com/login/oauth/authorize",
       "TokenEndpoint": "https://github.com/login/oauth/access_token",
       "UserInfoEndpoint": "https://api.github.com/user"
     },
     "Google": {
-      "ClientId": "id",
-      "ClientSecret": "secret",
+      "ClientId": "qwe",
+      "ClientSecret": "qwe",
       "CallbackURL": "/callback/google",
       "AuthorizationEndpoint": "https://accounts.google.com/o/oauth2/v2/auth",
       "TokenEndpoint": "https://oauth2.googleapis.com/token",
       "UserInfoEndpoint": "https://www.googleapis.com/oauth2/v3/userinfo"
     },
     "Vkontakte": {
-      "ClientId": "id",
-      "ClientSecret": "secret",
+      "ClientId": "qwe",
+      "ClientSecret": "qwe",
       "CallbackURL": "/callback/vk",
       "AuthorizationEndpoint": "https://oauth.vk.com/authorize",
       "TokenEndpoint": "https://oauth.vk.com/access_token",
